syntax = "proto3";

import "common/common.proto";

package registry;
option go_package = "github.com/oasislabs/oasis-core/go/grpc/registry";

message Runtime {
    bytes id = 1;

    common.CapabilitiesTEE.Hardware tee_hardware = 2;

    uint64 replica_group_size = 3;

    uint64 storage_group_size = 4;

    uint64 replica_group_backup_size = 5;

    uint64 replica_allowed_stragglers = 6;

    uint64 registration_time = 7;

    uint32 kind = 8;

    VersionInfo version = 9;

    bytes key_manager = 10;

}

message VersionInfo {
    uint64 version = 1;
    bytes tee = 2;
}

service RuntimeRegistry {
    rpc RegisterRuntime (RegisterRuntimeRequest) returns (RegisterRuntimeResponse) {}
    rpc GetRuntime (RuntimeRequest) returns (RuntimeResponse) {}
    rpc GetRuntimes (RuntimesRequest) returns (RuntimesResponse) {}
    rpc WatchRuntimes (WatchRuntimesRequest) returns (stream WatchRuntimesResponse) {}
}

message RegisterRuntimeRequest {
    // Signed blob should be a CBOR-serialized runtime.
    common.Signed runtime = 1;
}

message RegisterRuntimeResponse {
}

message RuntimeRequest {
    bytes id = 1;
    int64 height = 2;
}

message RuntimeResponse {
    Runtime runtime = 1;
}

message RuntimesRequest {
    int64 height = 1;
}

message RuntimesResponse {
    repeated Runtime runtime = 1;
}

message WatchRuntimesRequest {
}

message WatchRuntimesResponse {
    Runtime runtime = 1;
}
